@@ -5645,13 +5645,13 @@
                 <para>
                     <itemizedlist>
                         <listitem>
+                            <para>Fixed problems #365227 and #446361 (build issues on Solaris)</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed problem #424159 (column sort problem)</para>
                         </listitem>
                         <listitem>
                             <para>Fixed problem #434545 (Debian bug #421480: HUGE icons for device icons)</para>
-                        </listitem>
-                        <listitem>
-                            <para>Fixed problem #446361 (build issues on Solaris)</para>
                         </listitem>
                         <listitem>
                             <para>Fixed problem #447415 (inability to launch executables)</para>
