@@ -3,9 +3,9 @@ gnome-commander 1.2.5
 ---------------
 
 Bug fixes:
+ * Fixed problems #365227 and #446361 (build issues on Solaris)
  * Fixed problem #424159 (column sort problem)
  * Fixed problem #434545 (Debian bug #421480: HUGE icons for device icons)
- * Fixed problem #446361 (build issues on Solaris)
  * Fixed problem #447415 (inability to launch executables)
  * Fixed problem #490431 (view files with name containing '%')
  * Fixed problem when creating ~/dir
